--- a/Forget Me Knot/Base.lproj/Main.storyboard
+++ b/Forget Me Knot/Base.lproj/Main.storyboard
@@ -45,19 +45,37 @@
                                     <constraint firstAttribute="height" constant="50" id="Ws0-Rs-Jof"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="BCV-ZO-6fh">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="70" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TabCell" id="e8b-g5-Ox9">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TabCell" id="e8b-g5-Ox9" customClass="TabCell" customModule="Forget_Me_Knot" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="70" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="70" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="List" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ip-sB-cHi">
+                                                    <rect key="frame" x="12" y="0.0" width="46" height="50"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="30"/>
+                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </view>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="6ip-sB-cHi" secondAttribute="bottom" id="19P-q6-TPU"/>
+                                            <constraint firstItem="6ip-sB-cHi" firstAttribute="leading" secondItem="e8b-g5-Ox9" secondAttribute="leading" constant="12" id="Cde-7Q-8p3"/>
+                                            <constraint firstItem="6ip-sB-cHi" firstAttribute="top" secondItem="e8b-g5-Ox9" secondAttribute="top" id="Xh4-GP-pbr"/>
+                                            <constraint firstAttribute="trailing" secondItem="6ip-sB-cHi" secondAttribute="trailing" constant="12" id="hJC-9A-HFY"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="listLabel" destination="6ip-sB-cHi" id="hBk-3W-zUy"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
